tests/snapshots/examples_fixtures/type_system__failing__116_keyword_alias_end.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/116_keyword_alias_end.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

`end` is not a keyword in Flux. Use `}` to close blocks.

  examples/type_system/failing/116_keyword_alias_end.flx:22:1
   |
22 | end
   | ^^^

Hint:
  Replace `end` with `}`.
== stdout ==
<not executed>
