tests/snapshots/examples_fixtures/type_system__failing__117_if_missing_brace.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/117_if_missing_brace.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E076]: UNCLOSED DELIMITER

Expected a closing `}` to match this opening `{` in function `main`.

  --> examples/type_system/failing/117_if_missing_brace.flx:1:19
  |
1 | fn main() -> Unit {
  |                   ^

Help:
  Add `}` to close the body of function `main`.


--> compiler error[E034]: UNEXPECTED TOKEN

Expected `{` to begin the `if` body.

  --> examples/type_system/failing/117_if_missing_brace.flx:2:13
  |
2 |     if true 1 else 2
  |             ^

Hint:
  Flux requires braces: `if condition { ... } else { ... }`

Found 2 errors.
== stdout ==
<not executed>
