tests/snapshots/examples_fixtures/type_system__failing__121_match_fat_arrow.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/121_match_fat_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Match Arm Arrow

This match arm needs `->`, not `=>`.

  examples/type_system/failing/121_match_fat_arrow.flx:2:25
  |
2 |     let x = match 1 { 0 => 0, _ => 1 }
  |                         ^^

Note:
  while parsing function `main` > `match` expression

Help:
  Replace `=>` with `->`.


error[E034]: Missing Match Arm Arrow

This match arm needs `->`, not `=>`.

  examples/type_system/failing/121_match_fat_arrow.flx:2:33
  |
2 |     let x = match 1 { 0 => 0, _ => 1 }
  |                                 ^^

Note:
  while parsing function `main` > `match` expression

Help:
  Replace `=>` with `->`.

Found 2 errors.
== stdout ==
<not executed>
